# writ-fm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MILESTONES.md  README.md  SCHEDULE.md  SESSION_SUMMARY.md  TODO.md  docker-compose.yml  docker-stack.yml  index.html  overview.md  pyproject.toml  run_operator.sh
.claude/commands/: deploy-image.md
admin/: app.py  index.html  scheduler.py
config/: hosts.yaml  ondemand.yaml  schedule.yaml  segment_types.yaml  show_taxonomy.yaml  shows.yaml  sources.yaml  station.yaml
deploy/: .env.production  build.sh  setup-host.sh
docs/plans/: 2026-04-23-architecture-simplification-plan.md
listener-app/: index.html
mac/: api_server.py  bumper_daemon.sh  generate_voice_samples.py  google_tts.py  minimax_tts.py  music_gen_client.py  operator_prompt.md  play_history.py  schedule.py  stream_gapless.py  voice_samples.py
mac/content_generator/: helpers.py  listener_response_generator.py  music_bumper_generator.py  persona.py  talk_generator.py
mac/kokoro/: tts.py
shared/: __init__.py  config_loader.py  hosts.py  settings.py
station/: api_server.py  config.yaml.example  discogs_lookup.py  generate_voice_samples.py  google_tts.py  listener_daemon.sh  music_gen_client.py  ondemand.py  operator_daemon.sh  operator_prompt.md  play_history.py  qr_generator.py  schedule.py  start_music_gen.sh  stream_gapless.py  time_utils.py  voice_samples.py
station/content_generator/: __init__.py  helpers.py  listener_response_generator.py  music_bumper_generator.py  persona.py  (+2 more)
tests/: conftest.py  test_admin_voice_resolution.py  test_google_tts.py  test_schedule_voice_defaults.py  test_shared_hosts.py  test_talk_generator_voice_logic.py
tools/: backfill_short_titles.py
(+2 files in other folders)
