[project]
name = "writ-radio"
version = "0.1.0"
description = "WRIT-FM: 24/7 AI Radio Station with The Liminal Operator"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.12",
    "qrcode>=8.0",
    "yt-dlp>=2025.1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["station"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.1.0",
]
